--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ HOST=localhost
 PORT=5000
 admin=john
 password=hello
-mongoURI=mongodb://localhost:27017/MenuPLZ
+
+mongoURI= mongodb+srv://narjess:narjessDB@cluster0-9nhtk.mongodb.net/test?retryWrites=true&w=majority
+
+
 jwtSecret=fhksdfhalkghuhabjhshdfkh
