--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 admin=narjess
 password=hello
-mongoURI=mongodb+srv://narjess:narjessDB@cluster0-9nhtk.mongodb.net/test?retryWrites=true&w=majority
-mongoURI2=mongodb://localhost:27017/MenuPLZ
+mongoURI2=mongodb+srv://narjess:narjessDB@cluster0-9nhtk.mongodb.net/test?retryWrites=true&w=majority
+mongoURI=mongodb://localhost:27017/MenuPLZ
 jwtSecret=fhksdfhalkghuhabjhshdfkh
