--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-to-print": "^2.12.2",
     "smooth-scroll": "^16.1.3",
     "socket.io-client": "^3.0.3",
     "uuid": "^8.3.2"
