--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "qrcode": "^1.4.4",
     "socket.io": "^3.0.3"
   },
